--- a/index.html
+++ b/index.html
@@ -9,31 +9,89 @@
 	<!-- meyer-reset is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap" rel="stylesheet">
+	<!--font-family: 'Roboto', sans-serif;-->
 </head>
 <body>
+<section class= "homepage">
+	<div class="title">
+		<div class="women_center">
+			<h1 class="women">WOMEN</h1>
+		</div>
+
+		<div class="stem_center">
+			<span class="in"> in </span>
+			<h1 class="stem">S.T.E.M</h1>
+		</div>
+	</div>
+	<div class="hp_button_one_placement">
+		<div class="hp_button_one" id="hp_button_one_id">
+		</div>
+	</div>
+	<div class="hp_button_two_placement">
+	</div>
+	<div class="hp_button_three_placement">
+	</div>
+	<div class="hp_button_four_placement">
+	</div>
+</section>
+
+<section class="second_page" id="second_page_id">
+	<div class="main_icon_placement">
+		<div class="main_icon">
+		</div>
+	</div>
+	<div class="pg2_button_one_placement">
+	</div>
+	<div class="pg2_button_two_placement">
+	</div>
+	<div class="pg2_button_three_placement">
+	</div>
+	<div class="pg2_button_four_placement">
+	</div>
+	<div class="pg2_text_box">
+	</div>
+	<div class="pg2_title_box">
+	</div>
+
+
+</section>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>There Can Be Only One Header One</h1>
-		<h2>Header Two</h2>
-		<h3>Header Three</h3>
-		<h4>Header Four</h4>
-		<p>A paragraph of lorem ipsum text. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eligendi.</p>
+		<h1>Women
+		<span class="in"> in </span>
+		 STEM</h1>
+
+		<h2></h2>
+		<h3></h3>
+		<h4></h4>
+		<p>Women have influenced eras and changed nations. Throughout history, women have made extensive contributions in
+			 science, technology, engineering, and math (STEM). Whether it is Sally Ride, who transformed history by being the first
+			 American woman to fly into space, or Katherine Johnson, whose historical contributions to STEM were captured in "Hidden Figures." The STEM fields should be open to all. Yet,
+			 across the US there is a lack of gender diversity in STEM fields.</p>
 	</header>
 
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
 			<li><a href="subpage-one.html">example link to subpage one</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
+			<li><a href="#">S</a></li>
+			<li><a href="#">T</a></li>
+			<li><a href="#">E</a></li>
+			<li><a href="#">M</a></li>
 		</ul>
 	</nav>
 	<main>
 		<blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus soluta vero fugiat saepe, tempore laboriosam nemo pariatur maxime sunt rerum."</blockquote>
 	<!-- Main content here -->
 		<div class="grid">
-			<div>Column 1</div>
+			<div>Biography
+
+was an American physicist.[1] She was the lead scientist for the design and construction of the Tevatron at the Fermi National Accelerator Laboratory.[2][3] “She knew how to bring the right people together to carry out a project and how to encourage them to success. In private life, she was a nature lover and is remembered as a very gentle and caring person.”[4]
+Edwards was best known for leadership in the design, construction, commissioning and operation of the Tevatron, which for 25 years was the most powerful particle collider in the world. Tevatron recorded its first proton-antiproton collisions in 1985 and was used to find the top quark in 1995 and the tau neutrino in 2000, two of the three fundamental particles discovered at Fermilab. Between 1989-92, Edwards was also deeply involved in the eventually abandoned project of the Superconducting Super Collider in Texas.
+
+After 1992, Edwards made significant contributions to the development of high-gradient, superconducting linear accelerators as well as bright and intense electron sources. She played a key role working with scientists at DESY developing superconducting accelerator technology.[5] She led a Fermilab group collaborating with DESY in the 1990s and built the photoinjector for the TESLA Test Facility at the German laboratory. Fermilab has since developed superconducting accelerator technology to the point that it is the enabling technology behind its future proton accelerators.</div>
 			<div>Column 2</div>
 		</div>
 	</main>
