--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<!--font-family: 'Roboto', sans-serif;-->
 </head>
 <body>
+
 <section class= "homepage">
 	<div class="title">
 		<div class="women_center">
@@ -25,14 +26,16 @@
 		</div>
 	</div>
 	<div class="hp_button_one_placement">
-		<div class="hp_button_one" id="hp_button_one_id">
-		</div>
+		<img src="images/s_button.png" id="hp_button_one_id"  class="cursor_pointer" alt="">
 	</div>
 	<div class="hp_button_two_placement">
+		<img src="images/t_button.png" id="hp_button_two_id" class="cursor_pointer" alt="">
 	</div>
 	<div class="hp_button_three_placement">
+		<img src="images/e_button.png" id="homepage" class="cursor_pointer" alt="">
 	</div>
 	<div class="hp_button_four_placement">
+		<img src="images/m_button.png" id="homepage" class="cursor_pointer" alt="">
 	</div>
 </section>
 
@@ -53,7 +56,25 @@
 	</div>
 	<div class="pg2_title_box">
 	</div>
+</section>
 
+<section class="second_page" id="third_page_id">
+	<div class="main_icon_placement">
+		<div class="main_icon">
+		</div>
+	</div>
+	<div class="pg2_button_one_placement">
+	</div>
+	<div class="pg2_button_two_placement">
+	</div>
+	<div class="pg2_button_three_placement">
+	</div>
+	<div class="pg2_button_four_placement">
+	</div>
+	<div class="pg2_text_box">
+	</div>
+	<div class="pg2_title_box">
+	</div>
 
 </section>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
