--- a/index.html
+++ b/index.html
@@ -32,14 +32,62 @@
 		<img src="images/t_button.png" id="hp_button_two_id" class="cursor_pointer" alt="">
 	</div>
 	<div class="hp_button_three_placement">
-		<img src="images/e_button.png" id="homepage" class="cursor_pointer" alt="">
+		<img src="images/e_button.png" id="hp_button_three_id" class="cursor_pointer" alt="">
 	</div>
 	<div class="hp_button_four_placement">
-		<img src="images/m_button.png" id="homepage" class="cursor_pointer" alt="">
+		<img src="images/m_button.png" id="hp_button_fourth_id" class="cursor_pointer" alt="">
 	</div>
 </section>
 
-<section class="second_page" id="second_page_id">
+<section class="second_page second_page_bg_image" id="second_page_id">
+	<div class="main_icon_placement">
+		<div class="main_icon">
+			<img src="images/s_button.png" alt="">
+		</div>
+	</div>
+	<div class="pg2_button_one_placement">
+		<img src="images/t_button.png" id="page_2_button_t" class="page_2_buttons cursor_pointer" alt="">
+	</div>
+	<div class="pg2_button_two_placement">
+		<img src="images/e_button.png" id="page_2_button_e" class="page_2_buttons cursor_pointer" alt="">
+	</div>
+	<div class="pg2_button_three_placement">
+		<img src="images/m_button.png" id="page_2_button_m" class="page_2_buttons cursor_pointer" alt="">
+	</div>
+	<div class="pg2_text_box"> Biography
+
+was an American physicist.[1] She was the lead scientist for the design and construction of the Tevatron at the Fermi National Accelerator Laboratory.[2][3] “She knew how to bring the right people together to carry out a project and how to encourage them to success. In private life, she was a nature lover and is remembered as a very gentle and caring person.”[4]
+Edwards was best known for leadership in the design, construction, commissioning and operation of the Tevatron, which for 25 years was the most powerful particle collider in the world. Tevatron recorded its first proton-antiproton collisions in 1985 and was used to find the top quark in 1995 and the tau neutrino in 2000, two of the three fundamental particles discovered at Fermilab. Between 1989-92, Edwards was also deeply involved in the eventually abandoned project of the Superconducting Super Collider in Texas.
+
+After 1992, Edwards made significant contributions to the development of high-gradient, superconducting linear accelerators as well as bright and intense electron sources. She played a key role working with scientists at DESY developing superconducting accelerator technology.[5] She led a Fermilab group collaborating with DESY in the 1990s and built the photoinjector for the TESLA Test Facility at the German laboratory. Fermilab has since developed superconducting accelerator technology to the point that it is the enabling technology behind its future proton accelerators.
+	</div>
+	<div class="pg2_title_box"> Helen T. Edwards
+	</div>
+</section>
+
+<section class="second_page second_page_bg_image" id="third_page_id">
+	<div class="main_icon_placement">
+		<div class="main_icon">
+		</div>
+	</div>
+	<div class="pg3_button_one_placement">
+	<img src="images/t_button.png" id="page_3_button_t" class="page_3_buttons cursor_pointer" alt="">
+	</div>
+	<div class="pg2_button_two_placement">
+	</div>
+	<div class="pg2_button_three_placement">
+	</div>
+	<div class="pg2_button_four_placement">
+	</div>
+	<div class="pg2_text_box"> Rosalinda Franklin: was an English chemist and X-ray crystallographer whose work was central to the understanding of the molecular structures of DNA (deoxyribonucleic acid), RNA (ribonucleic acid), viruses, coal, and graphite.[2] Although her works on coal and viruses were appreciated in her lifetime, her contributions to the discovery of the structure of DNA were largely recognized posthumously.
+Born to a prominent British Jewish family, Franklin was educated at a private day school at Norland Place in West London, Lindores School for Young Ladies in Sussex, and St Paul's Girls' School, London. Then she studied the Natural Sciences Tripos at Newnham College, Cambridge, from which she graduated in 1941. Earning a research fellowship, she joined the University of Cambridge physical chemistry laboratory under Ronald George Wreyford Norrish, who disappointed her for his lack of enthusiasm.[3] The British Coal Utilisation Research Association (BCURA) offered her a research position in 1942 and started her work on coals. This helped her earn a Ph.D. in 1945.[4] She went to Paris in 1947 as a chercheur (post-doctoral researcher) under Jacques Mering at the Laboratoire Central des Services Chimiques de l'Etat, where she became an accomplished X-ray crystallographer. She became a research associate at King's College London in 1951 and worked on X-ray diffraction studies, which would eventually facilitate the double helix theory of the DNA.[5] In 1953, after two years, owing to a disagreement with her director John Randall and more so with her colleague Maurice Wilkins, she was compelled to move to Birkbeck College.[5] At Birkbeck, John Desmond Bernal, chair of the physics department, offered her a separate research team. She died in 1958 at the age of 37 of ovarian cancer.
+	</div>
+	<div class="pg2_title_box"> Rosalinda Franklin
+	</div>
+
+</section>
+
+<section class="third_page" id="fourth_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
 		</div>
@@ -52,13 +100,14 @@
 	</div>
 	<div class="pg2_button_four_placement">
 	</div>
-	<div class="pg2_text_box">
+	<div class="pg2_text_box"> Hertha Ayrton:was a British engineer, mathematician, physicist and inventor, and suffragette. Known in adult life as Hertha Ayrton, born Phoebe Sarah Marks, she was awarded the Hughes Medal by the Royal Society for her work on electric arcs and ripples in sand and water.
 	</div>
-	<div class="pg2_title_box">
+	<div class="pg2_title_box"> Hertha Ayrton
 	</div>
+
 </section>
 
-<section class="second_page" id="third_page_id">
+<section class="second_page" id="fifth_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
 		</div>
@@ -71,12 +120,17 @@
 	</div>
 	<div class="pg2_button_four_placement">
 	</div>
-	<div class="pg2_text_box">
+	<div class="pg2_text_box"> Edith Clarke: as the first woman to be professionally employed as an electrical engineer in the United States,[1] and the first female professor of electrical engineering in the country.[2] She was the first woman to deliver a paper at the American Institute of Electrical Engineers, the first female engineer whose professional standing was recognized by Tau Beta Pi, and the first woman named as a Fellow of the American Institute of Electrical Engineers. She specialized in electrical power system analysis[3] and wrote Circuit Analysis of A-C Power Systems.
 	</div>
-	<div class="pg2_title_box">
+	<div class="pg2_title_box"> Edith Clarke
 	</div>
 
 </section>
+
+
+
+
+
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
@@ -87,38 +141,29 @@
 		<h2></h2>
 		<h3></h3>
 		<h4></h4>
-		<p>Women have influenced eras and changed nations. Throughout history, women have made extensive contributions in
-			 science, technology, engineering, and math (STEM). Whether it is Sally Ride, who transformed history by being the first
-			 American woman to fly into space, or Katherine Johnson, whose historical contributions to STEM were captured in "Hidden Figures." The STEM fields should be open to all. Yet,
-			 across the US there is a lack of gender diversity in STEM fields.</p>
+		<p></p>
 	</header>
 
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><a href="subpage-one.html">example link to subpage one</a></li>
-			<li><a href="#">S</a></li>
-			<li><a href="#">T</a></li>
-			<li><a href="#">E</a></li>
-			<li><a href="#">M</a></li>
+			<li><a href="subpage-one.html"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
 		</ul>
 	</nav>
 	<main>
-		<blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus soluta vero fugiat saepe, tempore laboriosam nemo pariatur maxime sunt rerum."</blockquote>
+		<blockquote></blockquote>
 	<!-- Main content here -->
 		<div class="grid">
-			<div>Biography
-
-was an American physicist.[1] She was the lead scientist for the design and construction of the Tevatron at the Fermi National Accelerator Laboratory.[2][3] “She knew how to bring the right people together to carry out a project and how to encourage them to success. In private life, she was a nature lover and is remembered as a very gentle and caring person.”[4]
-Edwards was best known for leadership in the design, construction, commissioning and operation of the Tevatron, which for 25 years was the most powerful particle collider in the world. Tevatron recorded its first proton-antiproton collisions in 1985 and was used to find the top quark in 1995 and the tau neutrino in 2000, two of the three fundamental particles discovered at Fermilab. Between 1989-92, Edwards was also deeply involved in the eventually abandoned project of the Superconducting Super Collider in Texas.
-
-After 1992, Edwards made significant contributions to the development of high-gradient, superconducting linear accelerators as well as bright and intense electron sources. She played a key role working with scientists at DESY developing superconducting accelerator technology.[5] She led a Fermilab group collaborating with DESY in the 1990s and built the photoinjector for the TESLA Test Facility at the German laboratory. Fermilab has since developed superconducting accelerator technology to the point that it is the enabling technology behind its future proton accelerators.</div>
-			<div>Column 2</div>
+			<div>
+</div>
 		</div>
 	</main>
 	<footer>
 		<!-- footer content here -->
-		&copy; Team Awesome
 	</footer>
 	<!-- link for jquery -->
 	<script
