some final updates

--- a/index.html
+++ b/index.html
@@ -42,24 +42,36 @@
 <section class="second_page second_page_bg_image" id="second_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
-			<img src="images/s_button.png" alt="">
+			<img src="images/s_button_large.png" alt="">
 		</div>
 	</div>
 	<div class="pg2_button_one_placement">
-		<img src="images/t_button.png" id="page_2_button_t" class="page_2_buttons cursor_pointer" alt="">
+		<img src="images/s_button_large.png" id="page_2_button_s" class="page_2_buttons " style="opacity: .5" alt="">
 	</div>
+
 	<div class="pg2_button_two_placement">
-		<img src="images/e_button.png" id="page_2_button_e" class="page_2_buttons cursor_pointer" alt="">
+		<img src="images/t_button_large.png" id="page_2_button_t" class="page_2_buttons cursor_pointer" alt="">
 	</div>
 	<div class="pg2_button_three_placement">
-		<img src="images/m_button.png" id="page_2_button_m" class="page_2_buttons cursor_pointer" alt="">
+		<img src="images/e_button_large.png" id="page_2_button_e" class="page_2_buttons cursor_pointer" alt="">
 	</div>
-	<div class="pg2_text_box"> Biography
-
-was an American physicist.[1] She was the lead scientist for the design and construction of the Tevatron at the Fermi National Accelerator Laboratory.[2][3] “She knew how to bring the right people together to carry out a project and how to encourage them to success. In private life, she was a nature lover and is remembered as a very gentle and caring person.”[4]
-Edwards was best known for leadership in the design, construction, commissioning and operation of the Tevatron, which for 25 years was the most powerful particle collider in the world. Tevatron recorded its first proton-antiproton collisions in 1985 and was used to find the top quark in 1995 and the tau neutrino in 2000, two of the three fundamental particles discovered at Fermilab. Between 1989-92, Edwards was also deeply involved in the eventually abandoned project of the Superconducting Super Collider in Texas.
-
-After 1992, Edwards made significant contributions to the development of high-gradient, superconducting linear accelerators as well as bright and intense electron sources. She played a key role working with scientists at DESY developing superconducting accelerator technology.[5] She led a Fermilab group collaborating with DESY in the 1990s and built the photoinjector for the TESLA Test Facility at the German laboratory. Fermilab has since developed superconducting accelerator technology to the point that it is the enabling technology behind its future proton accelerators.
+	<div class="pg2_button_four_placement">
+		<img src="images/m_button_large.png" id="page_2_button_m" class="page_2_buttons cursor_pointer" alt="">
+	</div>
+	<div class="pg2_text_box">
+		<h2> Biography</h2>
+		<br>
+<p>
+	Helen T. Edwards was an American physicist.She was the lead scientist for the design and construction of the Tevatron at the Fermi National Accelerator Laboratory.“She knew how to bring the right people together to carry out a project and how to encourage them to success. In private life, she was a nature lover and is remembered as a very gentle and caring person.”
+</p>
+<br>
+<p>
+	Edwards was best known for leadership in the design, construction, commissioning and operation of the Tevatron, which for 25 years was the most powerful particle collider in the world. Tevatron recorded its first proton-antiproton collisions in 1985 and was used to find the top quark in 1995 and the tau neutrino in 2000, two of the three fundamental particles discovered at Fermilab. Between 1989-92, Edwards was also deeply involved in the eventually abandoned project of the Superconducting Super Collider in Texas.
+</p>
+<br>
+<p>
+	After 1992, Edwards made significant contributions to the development of high-gradient, superconducting linear accelerators as well as bright and intense electron sources. She played a key role working with scientists at DESY developing superconducting accelerator technology.[5] She led a Fermilab group collaborating with DESY in the 1990s and built the photoinjector for the TESLA Test Facility at the German laboratory. Fermilab has since developed superconducting accelerator technology to the point that it is the enabling technology behind its future proton accelerators.
+</p>
 	</div>
 	<div class="pg2_title_box"> Helen T. Edwards
 	</div>
@@ -68,104 +80,104 @@ After 1992, Edwards made significant contributions to the development of high-gr
 <section class="second_page second_page_bg_image" id="third_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
+		<img src="images/t_button_large.png" alt="">
 		</div>
 	</div>
-	<div class="pg3_button_one_placement">
-	<img src="images/t_button.png" id="page_3_button_t" class="page_3_buttons cursor_pointer" alt="">
+	<div class="pg2_button_one_placement">
+		<img src="images/s_button_large.png" id="page_3_button_s" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
+
 	<div class="pg2_button_two_placement">
+		<img src="images/t_button_large.png" id="page_3_button_t" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
 	<div class="pg2_button_three_placement">
+		<img src="images/e_button_large.png" id="page_3_button_e" class="page_2_buttons cursor_pointer" alt="">
 	</div>
 	<div class="pg2_button_four_placement">
+		<img src="images/m_button_large.png" id="page_3_button_m" class="page_2_buttons cursor_pointer" alt="">
 	</div>
-	<div class="pg2_text_box"> Rosalinda Franklin: was an English chemist and X-ray crystallographer whose work was central to the understanding of the molecular structures of DNA (deoxyribonucleic acid), RNA (ribonucleic acid), viruses, coal, and graphite.[2] Although her works on coal and viruses were appreciated in her lifetime, her contributions to the discovery of the structure of DNA were largely recognized posthumously.
-Born to a prominent British Jewish family, Franklin was educated at a private day school at Norland Place in West London, Lindores School for Young Ladies in Sussex, and St Paul's Girls' School, London. Then she studied the Natural Sciences Tripos at Newnham College, Cambridge, from which she graduated in 1941. Earning a research fellowship, she joined the University of Cambridge physical chemistry laboratory under Ronald George Wreyford Norrish, who disappointed her for his lack of enthusiasm.[3] The British Coal Utilisation Research Association (BCURA) offered her a research position in 1942 and started her work on coals. This helped her earn a Ph.D. in 1945.[4] She went to Paris in 1947 as a chercheur (post-doctoral researcher) under Jacques Mering at the Laboratoire Central des Services Chimiques de l'Etat, where she became an accomplished X-ray crystallographer. She became a research associate at King's College London in 1951 and worked on X-ray diffraction studies, which would eventually facilitate the double helix theory of the DNA.[5] In 1953, after two years, owing to a disagreement with her director John Randall and more so with her colleague Maurice Wilkins, she was compelled to move to Birkbeck College.[5] At Birkbeck, John Desmond Bernal, chair of the physics department, offered her a separate research team. She died in 1958 at the age of 37 of ovarian cancer.
+	<div class="pg3_text_box">
+		<h2> Biography</h2>
+		<br>
+	<p> Rosalinda Franklin was an English chemist and X-ray crystallographer whose work was central to the understanding of the molecular structures of DNA (deoxyribonucleic acid), RNA (ribonucleic acid), viruses, coal, and graphite.Although her works on coal and viruses were appreciated in her lifetime, her contributions to the discovery of the structure of DNA were largely recognized posthumously.
+Born to a prominent British Jewish family, Franklin was educated at a private day school at Norland Place in West London, Lindores School for Young Ladies in Sussex, and St Paul's Girls' School, London. Then she studied the Natural Sciences Tripos at Newnham College, Cambridge, from which she graduated in 1941.
+<br>
+<br>
+Earning a research fellowship, she joined the University of Cambridge physical chemistry laboratory under Ronald George Wreyford Norrish, who disappointed her for his lack of enthusiasm The British Coal Utilisation Research Association (BCURA) offered her a research position in 1942 and started her work on coals. This helped her earn a Ph.D. in 1945.She went to Paris in 1947 as a chercheur (post-doctoral researcher) under Jacques Mering at the Laboratoire Central des Services Chimiques de l'Etat, where she became an accomplished X-ray crystallographer. She became a research associate at King's College London in 1951 and worked on X-ray diffraction studies, which would eventually facilitate the double helix theory of the DNA. In 1953, after two years, owing to a disagreement with her director John Randall and more so with her colleague Maurice Wilkins, she was compelled to move to Birkbeck College. At Birkbeck, John Desmond Bernal, chair of the physics department, offered her a separate research team. She died in 1958 at the age of 37 of ovarian cancer.
+</p>
 	</div>
 	<div class="pg2_title_box"> Rosalinda Franklin
 	</div>
 
 </section>
 
-<section class="third_page" id="fourth_page_id">
+<section class="second_page second_page_bg_image" id="fourth_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
+		<img src="images/e_button_large.png" alt="">
 		</div>
 	</div>
 	<div class="pg2_button_one_placement">
+		<img src="images/s_button_large.png" id="page_4_button_s" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
+
 	<div class="pg2_button_two_placement">
+		<img src="images/t_button_large.png" id="page_4_button_t" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
 	<div class="pg2_button_three_placement">
+		<img src="images/e_button_large.png" id="page_4_button_e" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
 	<div class="pg2_button_four_placement">
+		<img src="images/m_button_large.png" id="page_4_button_m" class="page_2_buttons cursor_pointer" alt="">
 	</div>
-	<div class="pg2_text_box"> Hertha Ayrton:was a British engineer, mathematician, physicist and inventor, and suffragette. Known in adult life as Hertha Ayrton, born Phoebe Sarah Marks, she was awarded the Hughes Medal by the Royal Society for her work on electric arcs and ripples in sand and water.
+	<div class="pg3_text_box">
+		<h2> Biography</h2>
+		<br>
+<p> Hertha Ayrton was a British engineer, mathematician, physicist and inventor, and suffragette. Known in adult life as Hertha Ayrton, born Phoebe Sarah Marks, she was awarded the Hughes Medal by the Royal Society for her work on electric arcs and ripples in sand and water.Hertha Ayrton was born Phoebe Sarah Marks in Portsea, Hampshire, England, on 28 April 1854. She was the third child of a Polish Jewish watchmaker named Levi Marks, an immigrant from Tsarist Poland; and Alice Theresa Moss, a seamstress, the daughter of Joseph Moss, a glass merchant of Portsea.Upon her return to London, Ayrton earned money by teaching and embroidery, ran a club for working girls, and cared for her invalid sister.
+<br>
+<br>
+ She also put her mathematical skills to practical use – she taught at Notting Hill and Ealing High School, and was also active in devising and solving mathematical problems, many of which were published in "Mathematical Questions and Their Solutions" from the Educational Times. In 1884 Ayrton patented[8] a line-divider, an engineering drawing instrument for dividing a line into any number of equal parts and for enlarging and reducing figures. The line-divider was her first major invention and, while its primary use was likely for artists for enlarging and diminishing, it was also useful to architects and engineers.Ayrton's patent application was financially supported by Louisa Goldsmid and feminist Barbara Bodichon, who together advanced her enough money to take out patents; the invention was shown at the Exhibition of Women's Industries and received much press attention. Ayrton's 1884 patent was the first of many – from 1884 until her death, Hertha registered 26 patents: five on mathematical dividers, 13 on arc lamps and electrodes, the rest on the propulsion of air.
+</p>
 	</div>
 	<div class="pg2_title_box"> Hertha Ayrton
 	</div>
 
 </section>
 
-<section class="second_page" id="fifth_page_id">
+<section class="second_page second_page_bg_image" id="fifth_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
+		<img src="images/m_button_large.png" alt="">
 		</div>
 	</div>
 	<div class="pg2_button_one_placement">
+		<img src="images/s_button_large.png" id="page_5_button_s" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
+
 	<div class="pg2_button_two_placement">
+		<img src="images/t_button_large.png" id="page_5_button_t" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
 	<div class="pg2_button_three_placement">
+		<img src="images/e_button_large.png" id="page_5_button_e" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
 	<div class="pg2_button_four_placement">
+		<img src="images/m_button_large.png" id="page_5_button_m" class="page_2_buttons" style="opacity: .5" alt="">
 	</div>
-	<div class="pg2_text_box"> Edith Clarke: as the first woman to be professionally employed as an electrical engineer in the United States,[1] and the first female professor of electrical engineering in the country.[2] She was the first woman to deliver a paper at the American Institute of Electrical Engineers, the first female engineer whose professional standing was recognized by Tau Beta Pi, and the first woman named as a Fellow of the American Institute of Electrical Engineers. She specialized in electrical power system analysis[3] and wrote Circuit Analysis of A-C Power Systems.
+	<div class="pg3_text_box">
+		<h2> Biography</h2>
+		<br>
+		<p> as the first woman to be professionally employed as an electrical engineer in the United States, and the first female professor of electrical engineering in the country. She was the first woman to deliver a paper at the American Institute of Electrical Engineers, the first female engineer whose professional standing was recognized by Tau Beta Pi, and the first woman named as a Fellow of the American Institute of Electrical Engineers. She specialized in electrical power system analysis and wrote Circuit Analysis of A-C Power Systems.One of nine children, Edith Clarke was born to lawyer John Ridgely Clarke and Susan Dorsey Owings on February 10, 1883, in Howard County, Maryland. After being orphaned at age 12, she was raised by an older sister. She used her inheritance to study mathematics and astronomy at Vassar College, where she graduated in 1908.
+<br>
+<br>
+After college, Clarke taught mathematics and physics at a private school in San Francisco and at Marshall College. She then spent some time studying civil engineering at the University of Wisconsin–Madison, but left to become a "computer" at AT&T in 1912. She computed for George Campbell, who applied mathematical methods to the problems of long-distance electrical transmissions.While at AT&T, she studied electrical engineering at Columbia University by night.
+In 1918, Clarke enrolled at the Massachusetts Institute of Technology, and the following year she became the first woman to earn an M.S. in electrical engineering from MIT.
+</p>
 	</div>
 	<div class="pg2_title_box"> Edith Clarke
 	</div>
 
 </section>
 
-
-
-
-
-	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
-	<header>
-		<!-- header, h1, logo etc content -->
-		<h1>Women
-		<span class="in"> in </span>
-		 STEM</h1>
-
-		<h2></h2>
-		<h3></h3>
-		<h4></h4>
-		<p></p>
-	</header>
-
-	<nav>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
-			<li><a href="subpage-one.html"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-		</ul>
-	</nav>
-	<main>
-		<blockquote></blockquote>
-	<!-- Main content here -->
-		<div class="grid">
-			<div>
-</div>
-		</div>
-	</main>
-	<footer>
-		<!-- footer content here -->
-	</footer>
-	<!-- link for jquery -->
 	<script
   	src="https://code.jquery.com/jquery-3.4.1.min.js"
   	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
