--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	</div>
 </section>
 
-<section class="second_page second_page_bg_image" id="third_page_id">
+<section class="second_page third_page_bg_image" id="third_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
 		<img src="images/t_button_large.png" alt="">
@@ -111,7 +111,7 @@ Earning a research fellowship, she joined the University of Cambridge physical c
 
 </section>
 
-<section class="second_page second_page_bg_image" id="fourth_page_id">
+<section class="second_page fourth_page_bg_image" id="fourth_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
 		<img src="images/e_button_large.png" alt="">
@@ -144,7 +144,7 @@ Earning a research fellowship, she joined the University of Cambridge physical c
 
 </section>
 
-<section class="second_page second_page_bg_image" id="fifth_page_id">
+<section class="second_page fifth_page_bg_image" id="fifth_page_id">
 	<div class="main_icon_placement">
 		<div class="main_icon">
 		<img src="images/m_button_large.png" alt="">
